Fix login buttons style on IE11

--- a/server/sonar-web/src/main/js/apps/about/sonarcloud/components/LoginButtons.css
+++ b/server/sonar-web/src/main/js/apps/about/sonarcloud/components/LoginButtons.css
@@ -29,6 +29,7 @@
   border-radius: 4px;
   height: 44px;
   line-height: 44px;
+  white-space: nowrap;
   transition: all 0.2s ease;
   box-shadow: 0 1px 2px rgba(7, 7, 6, 0.1);
 }
